--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,12 +10,12 @@
         <title>Draft Tracker</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg bg-light shadow-sm">
             <div class="container-fluid">
                 <a class="navbar-brand">Draft Tracker</a>
             </div>
         </nav>
-        <main class="container-fluid">
+        <main class="container-fluid mt-5 pt-5">
             {% block main %}
             {% endblock %}
         </main>
